add download and close buttons (no functionality)

--- a/src/AttachmentPreview/AttachmentPreview.less
+++ b/src/AttachmentPreview/AttachmentPreview.less
@@ -1,7 +1,7 @@
 @import (reference) "../less/utilities";
 
 // TODO: rename this...? do I have to....?
-@ZZ-TOP: 100;
+@ZZ_TOP: 100;
 @HEADER_BAR_HEIGHT: @size_5xl; // 4rem
 @DESKTOP_BUFFER_SIZE: @size_l; // 1.5rem
 
@@ -19,7 +19,7 @@
   left: 0;
   background: fade(@neutral_black, 60%);
   // TODO: is there a protocol/standard for z indexes?
-  z-index: @ZZ-TOP;
+  z-index: @ZZ_TOP;
 }
 
 .AttachmentPreview--HeaderBar {
@@ -29,12 +29,13 @@
   left: 0;
   width: 100%;
   height: @HEADER_BAR_HEIGHT;
-  z-index: @ZZ-TOP + 1;
+  z-index: @ZZ_TOP + 1;
   .alignItems(center);
+  color: @neutral_white;
 }
 
 .AttachmentPreview--Title {
-  color: @neutral_white;
+  // color: @neutral_white;
   line-height: @size_l;
 }
 
@@ -53,14 +54,14 @@
   transform: translateX(-50%);
   // width: 100%;
   height: calc(100% - (2 * @DESKTOP_BUFFER_SIZE));
-  z-index: @ZZ-TOP + 1;
+  z-index: @ZZ_TOP + 1;
 }
 
 .AttachmentPreview--ImageContainer {
   margin: 0 auto;
   width: calc(100vw - (2 * @DESKTOP_BUFFER_SIZE));
   height: calc(100vh - @HEADER_BAR_HEIGHT - (2 * @DESKTOP_BUFFER_SIZE));
-  z-index: @ZZ-TOP + 2;
+  z-index: @ZZ_TOP + 2;
 }
 
 // TODO: change to .AttachmentPreview--ImageContainer
@@ -70,5 +71,22 @@
 
   // TODO: why isn't this working?
   .borderRadius--s();
-  z-index: @ZZ-TOP + 3;
+  z-index: @ZZ_TOP + 3;
+}
+
+.AttachmentPreview--PreviewWindow .mydiv {
+  height: auto;
+}
+
+.AttachmentPreview--DownloadContainer {
+  .margin--right--xl();
+}
+
+.AttachmentPreview--DownloadButton {
+  line-height: @size_ml;
+  .margin--right--xs();
+}
+
+.AttachmentPreview--CloseButton {
+  .margin--right--l();
 }
