fixes partially hidden x icon

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -167,6 +167,10 @@ button.MessagingInput--SendButton {
   .padding--bottom--xs();
 }
 
+.MessagingInput--UploadedAttachments .MessagingAttachment--ParentContainer {
+  overflow: visible; // ensures you can see the x icon in top right corner
+}
+
 .MessagingAttachment--ParentContainer {
   .margin--right--m();
 }
