ensures that the x button isn't partially hidden

--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -198,6 +198,10 @@
   }
 }
 
+.MessagingAttachment--ParentContainer.MessagingAttachment--ParentContainer--IsUpload {
+  overflow: visible; // ensures you can see the x icon in top right corner
+}
+
 // For mobile/tablet
 @media only screen and (max-width: @breakpointM) {
   .MessagingAttachment--Container {
