adds beta text to documentation file

--- a/docs/components/MessagingAttachmentView.less
+++ b/docs/components/MessagingAttachmentView.less
@@ -4,6 +4,10 @@
   .margin--bottom--xl;
 }
 
+.MessagingAttachmentView--beta {
+  .text--italic();
+}
+
 .MessagingAttachmentView--configContainer {
   .border--top--l(@neutral_silver);
   .margin--top--xl;
