--- a/src/AttachmentPreview/AttachmentPreview.less
+++ b/src/AttachmentPreview/AttachmentPreview.less
@@ -81,6 +81,7 @@
 
 .AttachmentPreview--DownloadContainer {
   .margin--right--xl();
+  cursor: pointer;
 }
 
 .AttachmentPreview--DownloadButton {
@@ -89,5 +90,7 @@
 }
 
 .AttachmentPreview--CloseButton {
-  .margin--right--l();
+  margin-right: @size_ml;
+  padding: 4px 6px;
+  cursor: pointer;
 }
