M5G-413 Attachments mobile refinements (#673)
* adds some basic mobile styling for attachments

* ensures message attachment width matches bubble width

* fixes partially hidden x icon

* runs make format

* addresses stylelint errors

* addresses another stylelint issue

* updates the docs to show that attachment is beta

* ensures that the x button isn't partially hidden

* runs make format

* adds beta text to documentation file

--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -198,11 +198,26 @@
   }
 }
 
+.MessagingAttachment--ParentContainer.MessagingAttachment--ParentContainer--IsUpload {
+  overflow: visible; // ensures you can see the x icon in top right corner
+}
+
 // For mobile/tablet
 @media only screen and (max-width: @breakpointM) {
-  .MessagingAttachment--Container,
-  .MessagingBubble--Message .MessagingAttachment--Container {
-    // Full width for small screens
+  .MessagingAttachment--Container {
+    padding: @size_s @size_s @size_s @size_xs;
     width: auto;
+  }
+
+  .MessagingAttachment--Title {
+    font-size: @type_small_medium; //14px
+  }
+
+  .MessagingBubble--Message--Container--Own .MessagingAttachment--Container {
+    margin-left: @size_5xl;
+  }
+
+  .MessagingBubble--Message--Container--Other .MessagingAttachment--Container {
+    margin-right: @size_5xl;
   }
 }
