--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -15,6 +15,8 @@
   }
 
   .FileInput--Icon {
+    position: absolute;
+    right: 0.5rem;
     margin: 0.25rem 0.5rem 0.25rem 0.75rem;
     .borderRadius--l();
 
