--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -15,6 +15,8 @@
   }
 
   .FileInput--Icon {
+    position: absolute;
+    right: 0.5rem;
     margin: 0.25rem 0.5rem 0.25rem 0.75rem;
     .borderRadius--l();
 
@@ -110,8 +112,10 @@
   .border--m(@neutral_silver);
 
   .TextArea--input {
+    .margin--y--none();
+    .padding--y--xs();
+    padding-right: 2.6rem;
     color: @neutral_dark_gray;
-    .margin--y--xs();
     // Fits 3 rows of text. Overflow is scrollable.
     max-height: @size_5xl;
     .text--line-height-4();
@@ -231,7 +235,7 @@ button.MessagingInput--SendButton {
 
   button.MessagingInput--SendButton {
     position: absolute;
-    right: 0.375rem;
+    right: 0.75rem;
     bottom: 0.375rem;
     height: @size_xl;
     width: @size_xl;
