Rename css classes relating to label and checkbox for clarity

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -15,24 +15,24 @@
   overflow-y: auto;
 }
 
-// ----- Info that shows above reply/text area
+// ----- Label and checkbox that show above reply/text area
 
-.MessagingInput--TopInfo--Container {
+.MessagingInput--LabelAndCheckbox--Container {
   .margin--bottom--2xs();
 }
 
-.MessagingInput--TopInfo--Checkbox {
+.MessagingInput--LabelAndCheckbox--Checkbox {
   margin-left: auto;
   animation: fadein 0.25s;
   .text--truncate();
 }
 
-.MessagingInput--TopInfo--Label {
+.MessagingInput--LabelAndCheckbox--Label {
   color: @neutral_medium_gray;
   .margin--right--m();
 }
 
-.MessagingInput--TopInfo--Label--hidden {
+.MessagingInput--LabelAndCheckbox--Label--hidden {
   /* stylelint-disable */
   position: absolute;
   width: 1px;
