AnnouncementBubble changes for attachments-only announcements and update docs

--- a/src/AnnouncementBubble/NormalAnnouncementBubble.less
+++ b/src/AnnouncementBubble/NormalAnnouncementBubble.less
@@ -47,6 +47,7 @@
 .NormalAnnouncementBubble--attachmentContainer {
   margin-top: 1rem;
   width: 100%;
+  .flex--direction--column();
 }
 
 .NormalAnnouncementBubble--attachmentContainer > .MessagingAttachment--ParentContainer,
