--- a/src/AnnouncementBubble/QuotedAnnouncementBubble.less
+++ b/src/AnnouncementBubble/QuotedAnnouncementBubble.less
@@ -83,6 +83,10 @@
   .margin--bottom--xs();
 }
 
+.QuotedAnnouncementBubble--attachmentContainer--marginTop {
+  .margin--top--xs();
+}
+
 .MessagingBubble--Message
   .QuotedAnnouncementBubble--attachmentContainer
   .MessagingAttachment--Container {
