--- a/src/AttachmentPreview/AttachmentPreview.less
+++ b/src/AttachmentPreview/AttachmentPreview.less
@@ -69,7 +69,7 @@
   height: 100%;
   width: 100%;
 
-  // TODO: fix this
+  // TODO: fix this in ticket M5G-504
   // This makes the img div only as large as the image, so none of the background is eclipsed and
   // the full bg area is clickable.
   // Unfortunately, its breaking scale-down.
@@ -131,7 +131,6 @@
   width: @size_l;
   line-height: @size_l;
   margin-right: @size_ml;
-  .margin--left--m();
   text-align: center;
   vertical-align: middle;
 
