--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -220,4 +220,19 @@
   .MessagingBubble--Message--Container--Other .MessagingAttachment--Container {
     margin-right: @size_5xl;
   }
+  
+  // ⬇️ In quoted announcements, we don't want the margins defined above ⬇️
+  .MessagingBubble--Message--Container--Own
+    .MessagingBubble--Message--Own.MessagingBubble--Message--Reply--Parent
+    .MessagingAttachment--Container {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .MessagingBubble--Message--Container--Other
+    .MessagingBubble--Message--Other.MessagingBubble--Message--Reply--Parent
+    .MessagingAttachment--Container {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
