fix timestamp mobile css and checkbox highlighting so it does not get cut off

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -25,11 +25,16 @@
   margin-left: auto;
   animation: fadein 0.25s;
   .text--truncate();
+  .padding--bottom--2xs();
+  .padding--left--2xs();
+  .padding--top--2xs();
 }
 
 .MessagingInput--LabelAndCheckbox--Label {
   color: @neutral_medium_gray;
   .margin--right--m();
+  .padding--bottom--2xs();
+  .padding--top--2xs();
 }
 
 .MessagingInput--LabelAndCheckbox--Label--hidden {
