--- a/src/AttachmentPreview/AttachmentPreview.less
+++ b/src/AttachmentPreview/AttachmentPreview.less
@@ -84,6 +84,20 @@
   .borderRadius--s();
 }
 
+.AttachmentPreview--ErrorContainer {
+  padding: @size_l;
+  background: @neutral_white;
+  line-height: @size_l;
+  border-radius: @size_xs;
+  color: @alert_red_shade_1;
+  font-weight: 600;
+}
+
+.AttachmentPreview--ErrorIcon {
+  font-size: @size_l;
+  .margin--right--xs();
+}
+
 // need to override Button styling, hence all the `color: @neutral_white !important;`
 .AttachmentPreview--DownloadButton {
   .margin--right--xs();
