runs make format

--- a/src/MessagingThreadHistory/MessageMetadata.less
+++ b/src/MessagingThreadHistory/MessageMetadata.less
@@ -62,7 +62,8 @@
   justify-content: flex-start;
 }
 
-.MessageMetadata--Error--fullWidth, .MessageMetadata--Error--center {
+.MessageMetadata--Error--fullWidth,
+.MessageMetadata--Error--center {
   justify-content: center;
 }
 
