--- a/src/AnnouncementBubble/NormalAnnouncementBubble.less
+++ b/src/AnnouncementBubble/NormalAnnouncementBubble.less
@@ -73,7 +73,7 @@ button.NormalAnnouncementBubble--deleteMenuItem {
   }
 }
 
-button.NormalAnnouncementBubble--menuIconContainer {
+.Button.NormalAnnouncementBubble--menuIconContainer {
   border: 0;
   height: 2.5rem;
   width: 2.5rem;
@@ -97,7 +97,7 @@ button.NormalAnnouncementBubble--menuIconContainer {
   }
 }
 
-button.NormalAnnouncementBubble--replyButton {
+.Button.NormalAnnouncementBubble--replyButton {
   /* stylelint-disable-next-line declaration-property-value-whitelist */
   background-color: #ffdf7f;
   border: 0;
