--- a/src/AnnouncementBubble/QuotedAnnouncementBubble.less
+++ b/src/AnnouncementBubble/QuotedAnnouncementBubble.less
@@ -124,7 +124,7 @@
   .margin--bottom--xs();
 }
 
-button.QuotedAnnouncementBubble--button--outer {
+.Button.QuotedAnnouncementBubble--button--outer {
   transition: none;
 
   // The following along with the {tab-index=-1} on the inner span allows for the button
