--- a/src/ExpandableContainer/ExpandableContainer.less
+++ b/src/ExpandableContainer/ExpandableContainer.less
@@ -15,7 +15,7 @@
   .padding--right--2xs();
 }
 
-button.ExpandableContainer--header {
+.Button.ExpandableContainer--header {
   color: @neutral_dark_gray;
   .padding--left--l();
   .padding--right--2xs();
