--- a/src/FloatingButton/FloatingButton.less
+++ b/src/FloatingButton/FloatingButton.less
@@ -37,7 +37,7 @@
   transition: opacity @timingPromptly @motionSmooth, transform @timingPromptly @motionSmooth;
 }
 
-button.FloatingButton--button {
+.Button.FloatingButton--button {
   .boxShadow--heavy();
   border-radius: 500rem;
 }
@@ -62,7 +62,7 @@ button.FloatingButton--button {
   pointer-events: none;
 }
 
-button.FloatingButton--green {
+.Button.FloatingButton--green {
   background-color: @alert_green_tint_1;
   border-color: @alert_green_tint_1;
   color: @neutral_white;
@@ -75,7 +75,7 @@ button.FloatingButton--green {
   }
 }
 
-button.FloatingButton--gray {
+.Button.FloatingButton--gray {
   background-color: @neutral_dark_gray;
   border-color: @neutral_dark_gray;
   color: @neutral_white;
