--- a/src/ResourceTile/ResourceTile.less
+++ b/src/ResourceTile/ResourceTile.less
@@ -122,7 +122,7 @@ a.dewey--ResourceTile--link {
   border-radius: 10% ~"/" 50%;
 }
 
-button.dewey--ResourceTile--actionButton {
+.Button.dewey--ResourceTile--actionButton {
   .padding--y--4xs();
   .text--center();
   width: 100%;
