--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -246,7 +246,7 @@
     .margin--right--none();
   }
 
-  button.MessagingInput--SendButton {
+  .Button.MessagingInput--SendButton {
     position: absolute;
     right: 0.75rem;
     bottom: 0.375rem;
