--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -126,7 +126,7 @@
   display: block;
 }
 
-button.MessagingInput--SendButton {
+.Button.MessagingInput--SendButton {
   // Sizing for this button is pretty particular
   padding: 0.6875rem 1.5rem 0.6875rem;
   line-height: normal;
@@ -246,7 +246,7 @@ button.MessagingInput--SendButton {
     .margin--right--none();
   }
 
-  button.MessagingInput--SendButton {
+  .Button.MessagingInput--SendButton {
     position: absolute;
     right: 0.75rem;
     bottom: 0.375rem;
