use class selector instead

--- a/src/AnnouncementBubble/QuotedAnnouncementBubble.less
+++ b/src/AnnouncementBubble/QuotedAnnouncementBubble.less
@@ -113,7 +113,7 @@
   color: @neutral_white;
 }
 
-.QuotedAnnouncementBubble--attachmentContainer--dark img {
+.QuotedAnnouncementBubble--attachmentContainer--dark img.MessagingAttachment--AttachmentTypeIcon {
   filter: brightness(0) invert(1); /* makes the file icon white without needing a different <img> src attr */
 }
 
