fix attachment width

--- a/src/AnnouncementBubble/NormalAnnouncementBubble.less
+++ b/src/AnnouncementBubble/NormalAnnouncementBubble.less
@@ -51,7 +51,9 @@
 }
 
 .NormalAnnouncementBubble--attachmentContainer > .MessagingAttachment--ParentContainer,
-.MessagingAttachment--ParentContainer > .MessagingAttachment--Container {
+.NormalAnnouncementBubble--attachmentContainer
+  > .MessagingAttachment--ParentContainer
+  > .MessagingAttachment--Container {
   width: 100%;
   margin-right: 0;
   .text--truncate();
