add fontawesome selector to att preview download button

--- a/src/AttachmentPreview/AttachmentPreview.less
+++ b/src/AttachmentPreview/AttachmentPreview.less
@@ -99,7 +99,7 @@
 }
 
 // need to override Button styling, hence all the `color: @neutral_white !important;`
-.AttachmentPreview--DownloadButton {
+.fa.AttachmentPreview--DownloadButton {
   .margin--right--xs();
   line-height: @size_l;
 
@@ -127,7 +127,7 @@
   :active {
     color: @neutral_white !important;
 
-    .AttachmentPreview--DownloadButton {
+    .fa.AttachmentPreview--DownloadButton {
       color: @neutral_white !important;
     }
   }
