--- a/src/AttachmentPreview/AttachmentPreview.less
+++ b/src/AttachmentPreview/AttachmentPreview.less
@@ -93,7 +93,7 @@
   font-weight: 600;
 }
 
-.AttachmentPreview--ErrorIcon {
+.fa.AttachmentPreview--ErrorIcon {
   font-size: @size_l;
   .margin--right--xs();
 }
