--- a/src/MessagingAttachment/MessagingAttachment.less
+++ b/src/MessagingAttachment/MessagingAttachment.less
@@ -216,12 +216,16 @@
   .MessagingBubble--Message--Container--Own .MessagingAttachment--Container {
     margin-left: @size_5xl;
     width: calc(100% - 4rem);
+    min-width: 13rem;
+    max-width: 21.125rem;
     overflow: hidden;
   }
 
   .MessagingBubble--Message--Container--Other .MessagingAttachment--Container {
     margin-right: @size_5xl;
     width: calc(100% - 4rem);
+    min-width: 13rem;
+    max-width: 21.125rem;
     overflow: hidden;
   }
 
