Make padding on announcement bubble reply variable

--- a/src/AnnouncementBubble/NormalAnnouncementBubble.less
+++ b/src/AnnouncementBubble/NormalAnnouncementBubble.less
@@ -107,8 +107,8 @@ button.NormalAnnouncementBubble--deleteMenuItem {
   border-radius: 1.5rem;
   .boxShadow--medium();
   height: 2rem;
-  padding: 0;
-  width: 6.625rem;
+  .padding--x--l();
+  .padding--y--none();
 
   // Center along bottom of AnnouncementBubble container with the following CSS
   left: 50%;
