--- a/src/AttachmentPreview/AttachmentPreview.less
+++ b/src/AttachmentPreview/AttachmentPreview.less
@@ -64,7 +64,7 @@
   // render image as large as natural size, or scale down to fit screen
   object-fit: scale-down;
   // We apply an absurdly large margin on the left&right so that the image element
-  // doesn't occupay any extra horizontal space. Clicks on the margin register on
+  // doesn't occupy any extra horizontal space. Clicks on the margin register on
   // the background component so that the preview will close properly.
   margin: 0 1000rem;
   height: fit-content;
