--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -199,60 +199,65 @@
 
 // For mobile/tablet
 @media only screen and (max-width: @breakpointM) {
+  // .MessagingInput--TextField {
+  //   .margin--right--none();
+  //   min-height: 2rem;
+
+  //   .TextArea--input {
+  //     // Padding to account for the inside-textarea Send button in mobile UI.
+  //     //  Ensures that text is to the left of the Send button.
+  //     padding-right: 2.5rem;
+  //   }
+  // }
+
+  // .MessagingInput--ShowUploadAttachmentButton {
+  //   .TextArea--input {
+  //     padding-right: 5.1875rem; // 83px
+  //   }
+
+  //   .FileInput {
+  //     position: absolute;
+  //     right: 2.25rem;
+  //     bottom: 0;
+
+  //     .FileInput--Icon {
+  //       .margin--left--xs();
+  //       margin-right: 0.3125rem; // 5px
+  //     }
+  //   }
+  // }
+
   .MessagingInput--TextField {
-    .margin--right--none();
-    min-height: 2rem;
-
-    .TextArea--input {
-      // Padding to account for the inside-textarea Send button in mobile UI.
-      //  Ensures that text is to the left of the Send button.
-      padding-right: 2.5rem;
-    }
-  }
-
-  .MessagingInput--ShowUploadAttachmentButton {
-    .TextArea--input {
-      padding-right: 5.1875rem; // 83px
-    }
-
-    .FileInput {
-      position: absolute;
-      right: 2.25rem;
-      bottom: 0;
-
-      .FileInput--Icon {
-        .margin--left--xs();
-        margin-right: 0.3125rem; // 5px
-      }
-    }
+    border-radius: 2rem;
   }
 
   .MessagingInput--Container {
     background-color: @neutral_white;
   }
 
-  .MessagingInput--SendIcon {
-    height: 100%;
-    display: block;
-    background-color: transparent;
-  }
+  // .MessagingInput--SendIcon {
+  //   height: 100%;
+  //   display: block;
+  //   background-color: transparent;
+  // }
 
   .MessagingInput--SendText {
     display: none;
   }
 
-  .MessagingInput--InnerContainer--Content {
-    .margin--right--none();
-  }
+  // .MessagingInput--InnerContainer--Content {
+  //   .margin--right--none();
+  // }
 
   .Button.MessagingInput--SendButton {
-    position: absolute;
-    right: 0.75rem;
-    bottom: 0.375rem;
-    height: @size_xl;
-    width: @size_xl;
-    padding: 0;
-    border: none;
+    // position: absolute;
+    // right: 0.75rem;
+    // bottom: 0.375rem;
+    // height: @size_xl;
+    // width: @size_xl;
+    // padding: 0;
+    // border: none;
+    border-radius: 2rem;
   }
 
   .MessagingInput--InstructionsLabel {
