Update checkbox to be left-aligned

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -22,9 +22,10 @@
 }
 
 .MessagingInput--LabelAndCheckbox--Checkbox {
-  margin-left: auto;
   animation: fadein 0.25s;
   .text--truncate();
+
+  // Leave enough space for the checkbox border when the checkbox is focused
   .padding--bottom--2xs();
   .padding--left--2xs();
   .padding--top--2xs();
