--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -115,12 +115,13 @@
 }
 
 .MessagingInput--SendText {
-  display: block;
+  .margin--left--xs();
 }
 
 .Button.MessagingInput--SendButton {
   // Sizing for this button is pretty particular
-  padding: 0.6875rem 1.5rem 0.6875rem;
+  border: none;
+  padding: 0.8125rem 0.75rem;
   line-height: normal;
 }
 
@@ -195,29 +196,6 @@
   .MessagingInput--TextField {
     .margin--right--none();
     min-height: 2rem;
-
-    .TextArea--input {
-      // Padding to account for the inside-textarea Send button in mobile UI.
-      //  Ensures that text is to the left of the Send button.
-      padding-right: 2.5rem;
-    }
-  }
-
-  .MessagingInput--ShowUploadAttachmentButton {
-    .TextArea--input {
-      padding-right: 5.1875rem; // 83px
-    }
-
-    .FileInput {
-      position: absolute;
-      right: 2.25rem;
-      bottom: 0;
-
-      .FileInput--Icon {
-        .margin--left--xs();
-        margin-right: 0.3125rem; // 5px
-      }
-    }
   }
 
   .MessagingInput--Container {
@@ -234,18 +212,8 @@
     display: none;
   }
 
-  .MessagingInput--InnerContainer--Content {
-    .margin--right--none();
-  }
-
   .Button.MessagingInput--SendButton {
-    position: absolute;
-    right: 0.75rem;
-    bottom: 0.375rem;
-    height: @size_xl;
-    width: @size_xl;
-    padding: 0;
-    border: none;
+    border-radius: 50%;
   }
 
   .MessagingInput--InstructionsLabel {
