Update Family Portal Logo

--- a/src/FamilyPortalLogo/FamilyPortalLogo.less
+++ b/src/FamilyPortalLogo/FamilyPortalLogo.less
@@ -7,9 +7,7 @@
 
 .dewey--FamilyPortalLogo--image {
   .flexShrink(0);
-  height: 1em;
+  height: 1.5rem;
   transition: all @timingPromptly ease-out;
-
-  // Required to maintain aspect ratio in IE10. These are measurements from the SVG view box.
-  width: 86em / 46;
+  width: auto;
 }
