[a11y] darken check icon to increase contrast ratio with background

--- a/src/Switch/Switch.less
+++ b/src/Switch/Switch.less
@@ -53,7 +53,7 @@
 
 .Switch--checkedIcon {
   .transition-stroke-fill;
-  .pathColor(@alert_green_shade_2);
+  .pathColor(@neutral_black);
   width: 0.875rem;
   height: 0.688rem;
   pointer-events: none;
