--- a/src/Switch/Switch.less
+++ b/src/Switch/Switch.less
@@ -64,7 +64,7 @@
 
 .Switch--uncheckedIcon {
   .transition-stroke-fill;
-  .pathColor(@neutral_dark_gray);
+  .pathColor(@neutral_black);
   width: 0.625rem;
   height: 0.625rem;
   pointer-events: none;
