Use darker blue to ensure sufficient focus state contrast
And still maintain no border color change on mobile focus until
we get further input from Deque on whether this is acceptable

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -54,7 +54,7 @@
 }
 
 .MessagingInput--Reply--Container.MessagingInput--Reply--Container--WithActiveInput {
-  .border--m(@primary_blue_tint_2);
+  .border--m(@primary_blue);
   border-bottom: none;
 }
 
@@ -119,7 +119,7 @@
   }
 
   &.TextArea--inFocus {
-    .border--m(@primary_blue_tint_2);
+    .border--m(@primary_blue);
     box-shadow: none;
   }
 }
