Use decreased rounding on mobile when attachments are present

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -241,6 +241,10 @@
     border-top: none;
   }
 
+  .MessagingInput--TextField.MessagingInput--TextField--WithAttachments {
+    .borderRadius--xl();
+  }
+
   .MessagingInput--Container {
     background-color: @neutral_white;
   }
